--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,17 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/musicdb
+#spring.jpa.hibernate.ddl-auto=update
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/budgetplannerdb
+#spring.datasource.username=user
+#spring.datasource.password=password
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#server.servlet.context-path=/budgetplanner
+
+
+spring.datasource.url=jdbc:h2:mem:budgetplannerdb
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=user
 spring.datasource.password=password
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.servlet.context-path=/budgetplanner
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
